# Westward

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: BuildApplication.yml  BuildProject.yml  cmake-multi-platform.yml
src/: main.cpp
